--- a/build.gradle
+++ b/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id "java"
     id "checkstyle"
 }
+
 import com.github.jrubygradle.JRubyExec
 repositories {
     mavenCentral()
@@ -20,9 +21,10 @@ targetCompatibility = 1.7
 
 dependencies {
     compile  "org.embulk:embulk-core:0.8.22"
+    compile  "com.google.guava:guava:18.0"
     provided "org.embulk:embulk-core:0.8.22"
-    // compile "YOUR_JAR_DEPENDENCY_GROUP:YOUR_JAR_DEPENDENCY_MODULE:YOUR_JAR_DEPENDENCY_VERSION"
     testCompile "junit:junit:4.+"
+    testCompile "org.embulk:embulk-core:0.8.+:test"
 }
 
 task classpath(type: Copy, dependsOn: ["jar"]) {
