fix unit tests.

--- a/build.gradle
+++ b/build.gradle
@@ -24,7 +24,7 @@ dependencies {
     compile  "com.google.guava:guava:18.0"
     provided "org.embulk:embulk-core:0.8.22"
     testCompile "junit:junit:4.+"
-    testCompile "org.embulk:embulk-core:0.8.+:test"
+    testCompile "org.embulk:embulk-core:0.8.+:tests"
 }
 
 task classpath(type: Copy, dependsOn: ["jar"]) {
